ChartJS + API fetch

--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "chart.js": "^4.3.0",
+    "one-rep-max": "^1.0.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1"
   },
